<resources>
    <string name="app_name">AmiVerse</string>
    <string name="amity_logo">Amity</string>
    <string name="home">Home</string>
    <string name="amiverse">AmiVerse</string>
    <string name="login">Log in</string>
    <string name="admin_login">Admin Login</string>
    <string name="register_message">New User?</string>
    <string name="welcome">Welcome to AmiVerse</string>
    <string name="photo">Photo Upload</string>
    <string name="quick_link">Quick Links</string>
    <string name="amity_web"><a href="https://www.amity.edu/">Amity University Website</a></string>
    <string name="placement"><a href="https://www.amity.edu/placement/placement-record.asp">Amity University Placements</a></string>
    <string name="dist_learn"><a href="http://addoe.amity.edu/">Amity Distance Learnings Programmes</a></string>
    <string name="prog_web"><a href="https://www.amity.edu/programe-list.aspx?fd=all">Amity University Courses</a></string>
    <string name="tour">Take online campus tour!</string>
    <string name="carrier"><a href="http://alumni.amity.edu/jobs.aspx">Careers in Amity University</a></string>

    <string name="admis"><a href="https://www.amity.edu/admission-procedure-domestic.aspx">Amity University Admission Procedure</a></string>
    <string name="event">Upcoming Events</string>
    <string name="acc"><a href="https://acc.amityaump.com/">Amity Coding Club</a></string>
    <string name="virtual360"><a href="https://www.google.co.in/maps/place/Amity+University+Gwalior/@26.2729206,78.2292078,2a,75y,105.15h,90t/data=!3m6!1e1!3m4!1sYISDbuM5MdCTxAeqeEG_PA!2e0!7i13312!8i6656!4m7!3m6!1s0x3976c0e647bece07:0xd848338a0d6a5393!8m2!3d26.2727152!4d78.2283897!14m1!1BCgIgARICCAI?hl=en">Amity 360 Virtual Tour</a></string>

    <string name="upcoming_events">Upcoming Events</string>
    <string name="notice_board">NOTICE BOARD</string>
    <string name="amity_sangathan"><a href="https://www.amity.edu/infra-play-sangathan.aspx">Amity University Sangathan</a></string>
    <string name="amichroma"><a href="https://amityaump.com/">Amichroma</a></string>
    <string name="mediafest"><a href="http://addoe.amity.edu/">Media Fest 2020</a></string>
    <string name="conference"><a href="https://amity.edu/gwalior/event-detail-normal.aspx?Event=10023">Conference</a></string>
    <string name="dept">Department: ASET</string>
    <string name="date2">21 Jan</string>
    <string name="sangathan"><a href="https://www.amity.edu/gwalior/photo-gallery">Sangathan</a></string>
    <string name="Amichroma"><a href="https://www.amity.edu/gwalior/photo-gallery">AmiChroma</a></string>
    <string name="Raising_day"><a href="https://www.amity.edu/gwalior/photo-gallery">Raising Day</a></string>
    <string name="Click_o_mania"><a href="https://www.amity.edu/gwalior/photo-gallery">Click o Mania</a></string>
    <string name="aump_clubs">AUMP Clubs</string>
    <string name="amity_coding_club">AMITY CODING CLUB</string>
    <string name="upgrade_your_technical_skills">Upgrade your technical skills.</string>
    <string name="eco_club">Eco Club</string>
    <string name="participate_in_eco_drives_and_enrich_environment_knowledge">Participate in eco drives and enrich environment knowledge</string>
    <string name="literature_club">Literature Club</string>
    <string name="enhance_explore_and_express_the_love_for_literature">Enhance,Explore and Express the love for literature</string>
    <string name="e_forms">E Forms</string>
    <string name="coding_competition">Coding Competition</string>
    <string name="date_1_june_2020">Date:1 June 2020</string>
    <string name="android_development_webinar">Android Development Webinar</string>
    <string name="organiser_mr_dinesh_sharma">Organiser:Mr.Dinesh Sharma</string>
    <string name="department_aset_cse">Department:ASET(CSE)</string>
    <string name="date_24_may_2020">Date:24 May 2020</string>
    <string name="date">24 July</string>
    <string name="go_for_registration">Go for Registration</string>
    <string name="events">Events</string>
    <string name="register_button">Register</string>
    <string name="gallery">Gallery</string>
    <string name="welcome_to_amiverse">Welcome to AmiVerse</string>
    <string name="todo">TODO</string>
    <string name="amigallery">AmiGallery</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="menubar">menuBar</string>
    <string name="amihome">AmiHome</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="admin_message">Are you admin? Login here</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="guest">Guest Login</string>
    <string name="student_panel">Amitians Login</string>
    <string name="home_second">Home Second</string>
    <string name="leadership">Leadership</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message">Already Amizoned?</string>

    <string name="nameleader1">Lt Gen (retd) VK Sharma</string>
    <string name="nameleader2">Prof. (Dr.) M.P. Kaushik</string>
    <string name="descleader1">I invite the young eager minds to Amity University, Madhya Pradesh, and equip themselves with knowledge and skills required to explore the changing landscape of economy and world. The university empowers its students through a holistic curriculum which includes training in personality development and confidence building; developing communication skills, team building through sports activities; learning discipline through military training camps and so on. The impeccable training gives a decisive edge to students in placement drive, which are considered the best across the country.

</string>
    <string name="descleader2">The university represents a world-class education culture characterized by globally benchmarked campuses and infrastructure, outstanding students, path breaking research and strong partnerships forged with key industries. The university puts its best in terms of academics and designs a dynamic curriculum that empowers youth and gives them an agility to respond to the evolving paradigms of pedagogy and practice. We consider this agility and hands-on training essential for higher education today. My best wishes to all students.</string>
    <string name="leader1design">Vice Chancellor, AUMP</string>
    <string name="leader2design">Pro Vice-Chancellor, AUMP</string>
    <string name="name">Name</string>
    <string name="amiverse_user">Amiverse User</string>
    <string name="amimail">ami@gmail.com</string>

    <string name="gold"> gold</string>
    <string name="silver"> silver</string>
    <string name="bronz"> bronze</string>
    <string name="Block"> Block</string>
    <string name="Score"> score</string>
    <string name="ALS"> ALS</string>
    <string name="ABS"> ABS</string>
    <string name="ASET"> ASET</string>
    <string name="ASCO"> ASCO</string>
    <string name="ASFD"> ASDF</string>
    <string name="AIBAS"> AIBAS</string>
    <string name="ASP">ASP</string>
    <string name="Gold_medal"> Gold_medal</string>
    <string name="Silver_medal"> Silver_medal</string>
    <string name="Bronze_medal"> Bronze_medal </string>
    <string name="submit">Submit</string>
    <string name="Scorecard">Scorecard</string>
    <string name="Results">Results</string>
    <string name="Campustour">360 Campus Tour</string>
    <string name="Result">Result</string>
    <string name="Notice">Notice</string>
    <string name="Announcement">Announcement</string>
    <string name="admin">admin</string>

    <string-array name="Block">
        <item>ABS</item>
        <item>ALS</item>
        <item>ASET</item>
        <item>ASCO</item>
        <item>AIBAS</item>
        <item>ASP</item>
        <item>ASFD</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
