<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".eFormsMain"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"
        />


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="108dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/amity_logo"

        android:src="@drawable/official_logo" />

        <TextView
            android:id="@+id/upcoming_events"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="5dp"
            android:paddingBottom="20dp"
            android:text="@string/e_forms"
            android:textColor="@color/colorBack"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

</LinearLayout>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"

        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EDA9A9"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/coding_competition"


                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#EAA27E"
                android:padding="5dp"
                android:text="@string/organiser_mr_dinesh_sharma"

                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#EAA27E"
                android:padding="5dp"
                android:text="@string/department_aset_cse"

                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#EAA27E"
                android:padding="5dp"
                android:text="@string/date_1_june_2020"

                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E9379D9F"
                android:shadowColor="#E9379D9F"
                android:text="@string/go_for_registration" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/android_development_webinar"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#EAA27E"
                android:padding="5dp"
                android:text="@string/organiser_mr_dinesh_sharma"

                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#EAA27E"

                android:text="@string/department_aset_cse"

                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#EAA27E"
                android:padding="5dp"
                android:text="@string/date_24_may_2020"
                android:textSize="20sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E9379D9F"
                android:shadowColor="#E9379D9F"
                android:text="@string/go_for_registration" />




        </LinearLayout>
    </ScrollView>


</LinearLayout>
