<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    >

    <LinearLayout
        android:background="@drawable/official_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bd_card"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/bgedittext"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:autofillHints="@string/name"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/bgedittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/bgedittext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="@string/email"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="@drawable/bg_btn"
            android:layout_marginTop="32dp"
            android:onClick="Register"
            android:textAllCaps="false"
            android:text="@string/register_button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="28dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="#363636"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtsignup"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FF6B00"
                android:textSize="16sp"
                android:onClick="moveToLogin"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>